looked at day 3 again, didn't get far

--- a/Day 3 - Spiral Memory.ipynb
+++ b/Day 3 - Spiral Memory.ipynb
@@ -32,21 +32,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, I want to visualize how the data is stored. so the necessary imports:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the viz stuff\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt # mpl is the base of all python plotting angst\n",
+    "import seaborn as sns # put some trainer wheels & lipstick on mpl\n",
+    "\n",
+    "# cause data\n",
+    "import numpy as np\t\t\t\t# crunch them numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From eyeballing the data square, it makes sense to only deal with odd sized squares, so everytime we make the next size square we start with the bottom right corner:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "[1, 3, 3, 3, 3, 3, 3, 3, 3, 5, 5, 7]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "def find_square_size(n):\n",
+    "    '''given a number n, requrn the side length of the odd square it fits in'''\n",
+    "    \n",
+    "    # get square root and round up\n",
+    "    num = int(np.ceil(np.sqrt(n))) \n",
+    "    \n",
+    "    # make sure the square we're ruturning is a odd square\n",
+    "    while num % 2 == 0:\n",
+    "        num += 1        \n",
+    "    return num\n",
+    "\n",
+    "[find_square_size(n) for n in [1,2,3,4,5,6,7,8,9,10,11,49]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nums in square:  [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sq = 9\n",
+    "sq_length = find_square_size(sq)\n",
+    "mid = sq_length // 2\n",
+    "\n",
+    "sq_nums = [num for num in range(1, sq+1)]\n",
+    "print(\"nums in square: \", sq_nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, lets get the range of x and y values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1,  0,  1]), array([-1,  0,  1]))"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(-mid, mid+1)\n",
+    "y = np.arange(-mid, mid+1)\n",
+    "x, y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives u the range of x and y for a given square, now to get the coordinate space:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-1,  0,  1],\n",
+       "        [-1,  0,  1],\n",
+       "        [-1,  0,  1]]), array([[-1, -1, -1],\n",
+       "        [ 0,  0,  0],\n",
+       "        [ 1,  1,  1]]))"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xx, yy = np.meshgrid(x_vals, y_vals)\n",
+    "xx, yy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we can eyeball this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYYAAAD8CAYAAABzTgP2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGYJJREFUeJzt3X+QVeWd5/H3Z1p+rVMjIJQgoECF\nMXFGC9i7TlarJhNFIENFGMcxWJUKzphiJxtHalOxhLUq08VOSjL+4WKNNQlljCQ7pTKMMW31pFgE\n3fxhcLioATWFtO3OSttIjwpViw0ifvePezp7nrZvN5dzbrdNf15Vt+45z/Occ76cvvbnnh/tUURg\nZmbW57dGugAzM/t0cTCYmVnCwWBmZgkHg5mZJRwMZmaWcDCYmVnCwWBmZgkHg5mZJRwMZmaWuGCk\nCzgX06ZNi7lz5450GWZmo8q+ffv+LSKmDzVuVAbD3LlzqVarI12GmdmoIulfz2acTyWZmVnCwWBm\nZgkHg5mZJRwMZmaWcDCYmVmilGCQ9Iiko5JeqdMvSQ9K6pC0X9LiXN8aSYey15oy6hnIUy91cd2m\n3cxb3851m3bz1EtdzdqUjUX7t8EDvw+tk2vv+7eNdEV2HmnvbGfp9qVcvfVqlm5fSntne1O3V9bt\nqo8Cfwf8uE7/l4AF2esPgL8H/kDSVOCvgQoQwD5JbRHxfkl1AbVQ2PDkAXpPnwGg61gvG548AMCq\nRbPK3JSNRfu3wdN3wene2vzxt2rzAFffOnJ12XmhvbOd1udbOXnmJADdJ7ppfb4VgBXzVzRlm6Uc\nMUTEL4D3BhmyEvhx1OwBJkuaCSwDdkbEe1kY7ASWl1FT3v07Dv4mFPr0nj7D/TsOlr0pG4t2bfz/\nodDndG+t3aygzS9u/k0o9Dl55iSbX9zctG0O1zWGWcBbufnDWVu99k+QtFZSVVK1p6enoY2/fay3\noXazhhw/3Fi7WQOOnDjSUHsZRs3F54jYEhGViKhMnz7kX3QnLp08qaF2s4ZcNLuxdrMGzLhwRkPt\nZRiuYOgC5uTmZ2dt9dpLdfeyK5g0riVpmzSuhbuXXVH2pmwsuuE7MK7fl4xxk2rtZgWtW7yOiS0T\nk7aJLRNZt3hd07Y5XMHQBnwtuzvp88DxiOgGdgBLJU2RNAVYmrWVatWiWdx381XMmjwJAbMmT+K+\nm6/yhWcrx9W3wpcfhIvmAKq9f/lBX3i2UqyYv4LWa1uZeeFMhJh54Uxar21t2oVnAEVE8ZVIjwF/\nBEwD3qF2p9E4gIj4viRRu2tpOfAB8OcRUc2W/Qvgv2ar+m5E/Gio7VUqlfD/RM/MrDGS9kVEZahx\npdyuGhG3DdEfwDfr9D0CPFJGHWZmVtyoufhsZmbDw8FgZmYJB4OZmSUcDGZmlnAwmJlZwsFgZmYJ\nB4OZmSUcDGZmlnAwmJlZwsFgZmYJB4OZmSUcDGZmlnAwmJlZwsFgZmYJB4OZmSVKCQZJyyUdlNQh\naf0A/Q9Iejl7vS7pWK7vTK6vrYx6zMzs3BV+UI+kFuAh4EbgMLBXUltEvNY3JiL+S278XwGLcqvo\njYiFReswM7NylHHEcA3QERGdEfEh8DiwcpDxtwGPlbBdMzNrgjKCYRbwVm7+cNb2CZIuB+YBu3PN\nEyVVJe2RtKqEeszMrIBSnvncgNXA9og4k2u7PCK6JM0Hdks6EBFv9F9Q0lpgLcBll102PNWamY1B\nZRwxdAFzcvOzs7aBrKbfaaSI6MreO4HnSK8/5MdtiYhKRFSmT59etGYzM6ujjGDYCyyQNE/SeGq/\n/D9xd5GkzwJTgF/m2qZImpBNTwOuA17rv6yZmQ2fwqeSIuIjSXcCO4AW4JGIeFXSRqAaEX0hsRp4\nPCIit/jngB9I+phaSG3K381kZmbDT+nv6dGhUqlEtVod6TLMzEYVSfsiojLUOP/ls5mZJRwMZmaW\ncDCYmVnCwWBmZgkHg5mZJRwMZmaWcDCYmVnCwWBmZgkHg5mZJRwMZmaWcDCYmVnCwWBmZgkHg5mZ\nJRwMZmaWcDCYmVnCwWBmZolSgkHSckkHJXVIWj9A/+2SeiS9nL2+nutbI+lQ9lpTRj1mZnbuCj/a\nU1IL8BBwI3AY2CupbYBHdD4REXf2W3Yq8NdABQhgX7bs+0XrMjOzc1PGEcM1QEdEdEbEh8DjwMqz\nXHYZsDMi3svCYCewvISazMzsHJURDLOAt3Lzh7O2/v5U0n5J2yXNaXBZMzMbJsN18flpYG5EXE3t\nqGBroyuQtFZSVVK1p6en9ALNzKymjGDoAubk5mdnbb8REe9GxKls9mHg35/tsrl1bImISkRUpk+f\nXkLZZmY2kDKCYS+wQNI8SeOB1UBbfoCkmbnZm4BfZ9M7gKWSpkiaAizN2szMbIQUvispIj6SdCe1\nX+gtwCMR8aqkjUA1ItqAuyTdBHwEvAfcni37nqT/Ri1cADZGxHtFazIzs3OniBjpGhpWqVSiWq2O\ndBlmZqOKpH0RURlqnP/y2czMEg4GMzNLOBjMzCzhYDAzs4SDwczMEg4GMzNLOBjMzCzhYDAzs4SD\nwczMEg4GMzNLOBjMzCzhYDAzs4SDwczMEg4GMzNLOBjMzCzhYDAzs0QpwSBpuaSDkjokrR+g/1uS\nXpO0X9IuSZfn+s5Iejl7tfVf1szMhlfhR3tKagEeAm4EDgN7JbVFxGu5YS8BlYj4QNI3gL8FvpL1\n9UbEwqJ1mJlZOco4YrgG6IiIzoj4EHgcWJkfEBHPRsQH2eweYHYJ2zUzsyYoIxhmAW/l5g9nbfXc\nAfw8Nz9RUlXSHkmr6i0kaW02rtrT01OsYjMzq6vwqaRGSPoqUAG+kGu+PCK6JM0Hdks6EBFv9F82\nIrYAWwAqlUoMS8FmZmNQGUcMXcCc3PzsrC0haQlwL3BTRJzqa4+Iruy9E3gOWFRCTWZmdo7KCIa9\nwAJJ8ySNB1YDyd1FkhYBP6AWCkdz7VMkTcimpwHXAfmL1mZmNswKn0qKiI8k3QnsAFqARyLiVUkb\ngWpEtAH3A78N/KMkgP8TETcBnwN+IOljaiG1qd/dTGZmNswUMfpO11cqlahWqyNdhpnZqCJpX0RU\nhhrnv3w2M7OEg8HMzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIO\nBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMzS5QSDJKWSzooqUPS+gH6J0h6Iut/QdLcXN+GrP2gpGVl\n1GNmZueu8BPcJLUADwE3AoeBvZLa+j2J7Q7g/Yj4jKTVwPeAr0i6ktqjQH8PuBR4RtLvRsSZonX1\n99RLXdy/4yBvH+vl0smTuHvZFaxaNKvszdhYtX8b7NoIxw/DRbPhhu/A1beOdFV2nmjvbGfzi5s5\ncuIIMy6cwbrF61gxf0XTtlfGEcM1QEdEdEbEh8DjwMp+Y1YCW7Pp7cANqj3jcyXweESciog3gY5s\nfaV66qUuNjx5gK5jvQTQdayXDU8e4KmXusrelI1F+7fB03fB8beAqL0/fVet3ayg9s52Wp9vpftE\nN0HQfaKb1udbae9sb9o2ywiGWcBbufnDWduAYyLiI+A4cPFZLlvY/TsO0ns6PQjpPX2G+3ccLHtT\nNhbt2gine9O20721drOCNr+4mZNnTiZtJ8+cZPOLm5u2zVFz8VnSWklVSdWenp6Gln37WG9D7WYN\nOX64sXazBhw5caSh9jKUEQxdwJzc/OysbcAxki4ALgLePctlAYiILRFRiYjK9OnTGyrw0smTGmo3\na8hFsxtrN2vAjAtnNNRehjKCYS+wQNI8SeOpXUxu6zemDViTTd8C7I6IyNpXZ3ctzQMWAP9SQk2J\nu5ddwaRxLUnbpHEt3L3sirI3ZWPRDd+Bcf2+ZIybVGs3K2jd4nVMbJmYtE1smci6xeuats3CdyVF\nxEeS7gR2AC3AIxHxqqSNQDUi2oAfAj+R1AG8Ry08yMZtA14DPgK+2Yw7kvruPvJdSdYUfXcf+a4k\na4K+u4+G864k1b64jy6VSiWq1epIl2FmNqpI2hcRlaHGjZqLz2ZmNjwcDGZmlnAwmJlZwsFgZmYJ\nB4OZmSUcDGZmlnAwmJlZwsFgZmYJB4OZmSUcDGZmlnAwmJlZwsFgZmYJB4OZmSUcDGZmlnAwmJlZ\nwsFgZmaJQsEgaaqknZIOZe9TBhizUNIvJb0qab+kr+T6HpX0pqSXs9fCIvWYmVlxRY8Y1gO7ImIB\nsCub7+8D4GsR8XvAcuC/S5qc6787IhZmr5cL1mNmZgUVDYaVwNZseiuwqv+AiHg9Ig5l028DR4Hp\nBbdrZmZNUjQYLomI7mz6CHDJYIMlXQOMB97INX83O8X0gKQJBesxM7OCLhhqgKRngBkDdN2bn4mI\nkBSDrGcm8BNgTUR8nDVvoBYo44EtwD3AxjrLrwXWAlx22WVDlW1mZudoyGCIiCX1+iS9I2lmRHRn\nv/iP1hn3O0A7cG9E7Mmtu+9o45SkHwHfHqSOLdTCg0qlUjeAzMysmKKnktqANdn0GuBn/QdIGg/8\nFPhxRGzv1zczexe16xOvFKzHzMwKKhoMm4AbJR0ClmTzSKpIejgbcyvwh8DtA9yW+g+SDgAHgGnA\n3xSsx8zMClLE6DsrU6lUolqtjnQZZmajiqR9EVEZapz/8tnMzBIOBjMzSzgYzMws4WAwM7OEg8HM\nzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMzSzgYzMws4WAw\nM7NEoWCQNFXSTkmHsvcpdcadyT29rS3XPk/SC5I6JD2RPQbUzMxGUNEjhvXArohYAOzK5gfSGxEL\ns9dNufbvAQ9ExGeA94E7CtZjZmYFFQ2GlcDWbHorsOpsF5Qk4Hpg+7ksb2ZmzVE0GC6JiO5s+ghw\nSZ1xEyVVJe2R1PfL/2LgWER8lM0fBmbV25Cktdk6qj09PQXLNjOzei4YaoCkZ4AZA3Tdm5+JiJAU\ndVZzeUR0SZoP7JZ0ADjeSKERsQXYAlCpVOptx8zMChoyGCJiSb0+Se9ImhkR3ZJmAkfrrKMre++U\n9BywCPgnYLKkC7KjhtlA1zn8G8zMrERFTyW1AWuy6TXAz/oPkDRF0oRsehpwHfBaRATwLHDLYMub\nmdnwKhoMm4AbJR0ClmTzSKpIejgb8zmgKulX1IJgU0S8lvXdA3xLUge1aw4/LFiPmZkVpNoX99Gl\nUqlEtVod6TLMzEYVSfsiojLUOP/ls5mZJRwMZmaWcDCYmVnCwWBmZgkHg5mZJRwMZmaWcDCYmVnC\nwWBmZgkHg5mZJRwMZmaWcDCYmVnCwWBmZgkHg5mZJRwMZmaWcDCYmVnCwWBmZolCwSBpqqSdkg5l\n71MGGPNFSS/nXiclrcr6HpX0Zq5vYZF6zMysuKJHDOuBXRGxANiVzSci4tmIWBgRC4HrgQ+A/5kb\ncndff0S8XLAeMzMrqGgwrAS2ZtNbgVVDjL8F+HlEfFBwu2Zm1iRFg+GSiOjOpo8AlwwxfjXwWL+2\n70raL+kBSRPqLShpraSqpGpPT0+Bks3MbDBDBoOkZyS9MsBrZX5cRAQQg6xnJnAVsCPXvAH4LPAf\ngKnAPfWWj4gtEVGJiMr06dOHKtvMzM7RBUMNiIgl9fokvSNpZkR0Z7/4jw6yqluBn0bE6dy6+442\nTkn6EfDts6zbzMyapOippDZgTTa9BvjZIGNvo99ppCxMkCRq1ydeKViPmZkVVDQYNgE3SjoELMnm\nkVSR9HDfIElzgTnA/+q3/D9IOgAcAKYBf1OwHjMzK2jIU0mDiYh3gRsGaK8CX8/N/29g1gDjri+y\nfTMzK5//8tnMzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMzSzgYzMws4WAwM7OEg8HMzBIOBjMz\nSzgYzMws4WAwM7OEg8HMzBIOBjMzSzgYzMwsUSgYJP2ZpFclfSypMsi45ZIOSuqQtD7XPk/SC1n7\nE5LGF6nHzMyKK3rE8ApwM/CLegMktQAPAV8CrgRuk3Rl1v094IGI+AzwPnBHwXrqeuqlLq7btJt5\n69u5btNunnqpq1mbsrFo/zZ44PehdXLtff+2ka7IziPtne0s3b6Uq7dezdLtS2nvbG/q9goFQ0T8\nOiIODjHsGqAjIjoj4kPgcWBl9pzn64Ht2bit1J77XLqnXupiw5MH6DrWSwBdx3rZ8OQBh4OVY/82\nePouOP4WELX3p+9yOFgp2jvbaX2+le4T3QRB94luWp9vbWo4DMc1hlnAW7n5w1nbxcCxiPioX3vp\n7t9xkN7TZ5K23tNnuH/HUJlmdhZ2bYTTvWnb6d5au1lBm1/czMkzJ5O2k2dOsvnFzU3b5pDPfJb0\nDDBjgK57I+Jn5ZdUt461wFqAyy67rKFl3z7W21C7WUOOH26s3awBR04caai9DEMGQ0QsKbiNLmBO\nbn521vYuMFnSBdlRQ197vTq2AFsAKpVKNFLApZMn0TVACFw6eVIjqzEb2EWzs9NIA7SbFTTjwhl0\nn+gesL1ZhuNU0l5gQXYH0nhgNdAWEQE8C9ySjVsDNOUI5O5lVzBpXEvSNmlcC3cvu6IZm7Ox5obv\nwLh+XzLGTaq1mxW0bvE6JrZMTNomtkxk3eJ1Tdtm0dtV/0TSYeA/Au2SdmTtl0r6Z4DsaOBOYAfw\na2BbRLyareIe4FuSOqhdc/hhkXrqWbVoFvfdfBWzJk9CwKzJk7jv5qtYtagplzRsrLn6Vvjyg3DR\nHEC19y8/WGs3K2jF/BW0XtvKzAtnIsTMC2fSem0rK+avaNo2VfviPrpUKpWoVqsjXYaZ2agiaV9E\n1P2bsz7+y2czM0s4GMzMLOFgMDOzhIPBzMwSDgYzM0uMyruSJPUA/3qOi08D/q3Ecsriuhrjuhrj\nuhpzvtZ1eURMH2rQqAyGIiRVz+Z2reHmuhrjuhrjuhoz1uvyqSQzM0s4GMzMLDEWg2HLSBdQh+tq\njOtqjOtqzJiua8xdYzAzs8GNxSMGMzMbxHkZDJL+TNKrkj6WVPcKvqTlkg5K6pC0Ptc+T9ILWfsT\n2f8uvIy6pkraKelQ9j5lgDFflPRy7nVS0qqs71FJb+b6Fg5XXdm4M7ltt+XaR3J/LZT0y+znvV/S\nV3J9pe6vep+XXP+E7N/fke2Pubm+DVn7QUnLitRxDnV9S9Jr2f7ZJenyXN+AP9Nhqut2ST257X89\n17cm+7kfkrRmmOt6IFfT65KO5fqasr8kPSLpqKRX6vRL0oNZzfslLc71lb+vIuK8ewGfA64AngMq\ndca0AG8A84HxwK+AK7O+bcDqbPr7wDdKqutvgfXZ9Hrge0OMnwq8B/y7bP5R4JYm7K+zqgv4v3Xa\nR2x/Ab8LLMimLwW6gcll76/BPi+5Mf8Z+H42vRp4Ipu+Mhs/AZiXradlGOv6Yu4z9I2+ugb7mQ5T\nXbcDfzfAslOBzux9SjY9Zbjq6jf+r4BHhmF//SGwGHilTv8fAz8HBHweeKGZ++q8PGKIiF9HxFAP\ndL4G6IiIzoj4EHgcWClJwPXA9mzcVmBVSaWtzNZ3tuu9Bfh5RHxQ0vbrabSu3xjp/RURr0fEoWz6\nbeAoMOQf8JyDAT8vg9S7Hbgh2z8rgccj4lREvAl0ZOsblroi4tncZ2gPtaclNtvZ7K96lgE7I+K9\niHgf2AksH6G6bgMeK2nbdUXEL6h9CaxnJfDjqNlD7emXM2nSvjovg+EszQLyz2M8nLVdDByL2gOG\n8u1luCQi+p7RdwS4ZIjxq/nkh/K72aHkA5ImDHNdEyVVJe3pO73Fp2h/SbqG2rfAN3LNZe2vep+X\nAcdk++M4tf1zNss2s668O6h98+wz0M90OOv60+zns11S3yOAPxX7KzvlNg/YnWtu1v4aSr26m7Kv\nhnzm86eVpGeAgR56em9ENOURoWdjsLryMxERkureEpZ9G7iK2pPv+myg9gtyPLXb1u4BNg5jXZdH\nRJek+cBuSQeo/fI7ZyXvr58AayLi46z5nPfX+UjSV4EK8IVc8yd+phHxxsBrKN3TwGMRcUrSf6J2\ntHX9MG37bKwGtkfEmVzbSO6vYTNqgyEilhRcRRcwJzc/O2t7l9ph2gXZt76+9sJ1SXpH0syI6M5+\nkR0dZFW3Aj+NiNO5dfd9ez4l6UfAt4ezrojoyt47JT0HLAL+iRHeX5J+B2in9qVgT27d57y/BlDv\n8zLQmMOSLgAuovZ5Optlm1kXkpZQC9svRMSpvvY6P9MyftENWVdEvJubfZjaNaW+Zf+o37LPlVDT\nWdWVsxr4Zr6hiftrKPXqbsq+GsunkvYCC1S7o2Y8tQ9BW9Su6DxL7fw+wBqgrCOQtmx9Z7PeT5zb\nzH459p3XXwUMeAdDM+qSNKXvVIykacB1wGsjvb+yn91PqZ1/3d6vr8z9NeDnZZB6bwF2Z/unDVit\n2l1L84AFwL8UqKWhuiQtAn4A3BQRR3PtA/5Mh7GumbnZm6g9Ex5qR8lLs/qmAEtJj5ybWldW22ep\nXcz9Za6tmftrKG3A17K7kz4PHM+++DRnX5V5Zf3T8gL+hNq5tlPAO8COrP1S4J9z4/4YeJ1a4t+b\na59P7T/cDuAfgQkl1XUxsAs4BDwDTM3aK8DDuXFzqX0T+K1+y+8GDlD7Bfc/gN8errqAa7Nt/yp7\nv+PTsL+ArwKngZdzr4XN2F8DfV6onZq6KZuemP37O7L9MT+37L3ZcgeBL5X8eR+qrmey/w769k/b\nUD/TYarrPuDVbPvPAp/NLfsX2X7sAP58OOvK5luBTf2Wa9r+ovYlsDv7LB+mdi3oL4G/zPoFPJTV\nfIDc3ZbN2Ff+y2czM0uM5VNJZmY2AAeDmZklHAxmZpZwMJiZWcLBYGZmCQeDmZklHAxmZpZwMJiZ\nWeL/AX5s8d0VxCxwAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xe098912c>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(xx,yy, marker=\"o\", linestyle=\"none\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I have the coordinate space for a given square of numbers, now I need to arrange the numbers like:\n",
+    "\n",
+    "```\n",
+    "17  16  15  14  13\n",
+    "18   5   4   3  12\n",
+    "19   6   1   2  11\n",
+    "20   7   8   9  10\n",
+    "21  22  23---> ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = np.zeros((sq_length, sq_length))\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def data_steps(n):\n",
     "    '''returns the number of steps from data square n to the input port'''\n",
@@ -57,55 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x112e24ac8>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def build_spiral(n):\n",
-    "    '''builds a spiral of size n in a 2d grid'''\n",
-    "    x = [0]\n",
-    "    y = [0]\n",
-    "    for i in range(1, n):\n",
-    "        if i % 2:\n",
-    "            y.append(i+1)\n",
-    "            x.append(i)\n",
-    "        else:\n",
-    "            y.append(i)\n",
-    "            x.append(i+1)\n",
-    "    \n",
-    "    return zip(x,y)\n",
-    "\n",
-    "build_spiral(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-24f1f49ccfd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m          ]\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdata_square\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mdata_steps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_square\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tests = [(1, 0), \n",
     "         (12, 3), \n",
