--- a/Day 3 - Spiral Memory.ipynb
+++ b/Day 3 - Spiral Memory.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "        [ 1,  1,  1]]))"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,6 +202,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-1, -1), (0, 0), (1, 1), (-1, -1), (0, 0), (1, 1), (-1, -1), (0, 0), (1, 1)]"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to get all the coordinate pairs\n",
+    "[coordinates for coordinates in zip(xx.flatten(), xx.flatten())]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  0.  0.]\n",
+      "[[ 0.  0.  1.]\n",
       " [ 0.  0.  0.]\n",
       " [ 0.  0.  0.]]\n"
      ]
@@ -233,7 +254,26 @@
    ],
    "source": [
     "p = np.zeros((sq_length, sq_length))\n",
+    "p[0,-1] = 1\n",
     "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coordinates(n):\n",
+    "    '''returns the coordinates for a number n'''\n",
+    "    fits_in = find_square_size(n)\n",
+    "    square = fits_in - 2\n",
+    "    \n",
+    "    current_num = square*square\n",
+    "    \n",
+    "    DIRECTION = right\n",
+    "    \n",
+    "    while"
    ]
   },
   {
