moved inputs to puzzle_inputs directory

--- a/Day 2 - Corruption Checksum.ipynb
+++ b/Day 2 - Corruption Checksum.ipynb
@@ -34,403 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>515</td>\n",
-       "      <td>912</td>\n",
-       "      <td>619</td>\n",
-       "      <td>2043</td>\n",
-       "      <td>96</td>\n",
-       "      <td>93</td>\n",
-       "      <td>2242</td>\n",
-       "      <td>1385</td>\n",
-       "      <td>2110</td>\n",
-       "      <td>860</td>\n",
-       "      <td>2255</td>\n",
-       "      <td>621</td>\n",
-       "      <td>1480</td>\n",
-       "      <td>118</td>\n",
-       "      <td>1230</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>161</td>\n",
-       "      <td>6142</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1742</td>\n",
-       "      <td>237</td>\n",
-       "      <td>6969</td>\n",
-       "      <td>211</td>\n",
-       "      <td>4314</td>\n",
-       "      <td>5410</td>\n",
-       "      <td>4413</td>\n",
-       "      <td>3216</td>\n",
-       "      <td>6330</td>\n",
-       "      <td>261</td>\n",
-       "      <td>3929</td>\n",
-       "      <td>5552</td>\n",
-       "      <td>109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1956</td>\n",
-       "      <td>4470</td>\n",
-       "      <td>3577</td>\n",
-       "      <td>619</td>\n",
-       "      <td>105</td>\n",
-       "      <td>3996</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1666</td>\n",
-       "      <td>720</td>\n",
-       "      <td>4052</td>\n",
-       "      <td>108</td>\n",
-       "      <td>132</td>\n",
-       "      <td>2652</td>\n",
-       "      <td>306</td>\n",
-       "      <td>1892</td>\n",
-       "      <td>1869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2163</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2257</td>\n",
-       "      <td>895</td>\n",
-       "      <td>112</td>\n",
-       "      <td>1771</td>\n",
-       "      <td>1366</td>\n",
-       "      <td>1631</td>\n",
-       "      <td>2064</td>\n",
-       "      <td>2146</td>\n",
-       "      <td>103</td>\n",
-       "      <td>865</td>\n",
-       "      <td>123</td>\n",
-       "      <td>1907</td>\n",
-       "      <td>2362</td>\n",
-       "      <td>876</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1955</td>\n",
-       "      <td>3260</td>\n",
-       "      <td>1539</td>\n",
-       "      <td>764</td>\n",
-       "      <td>185</td>\n",
-       "      <td>5493</td>\n",
-       "      <td>5365</td>\n",
-       "      <td>5483</td>\n",
-       "      <td>4973</td>\n",
-       "      <td>175</td>\n",
-       "      <td>207</td>\n",
-       "      <td>1538</td>\n",
-       "      <td>4824</td>\n",
-       "      <td>205</td>\n",
-       "      <td>1784</td>\n",
-       "      <td>2503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>181</td>\n",
-       "      <td>3328</td>\n",
-       "      <td>2274</td>\n",
-       "      <td>3798</td>\n",
-       "      <td>1289</td>\n",
-       "      <td>2772</td>\n",
-       "      <td>4037</td>\n",
-       "      <td>851</td>\n",
-       "      <td>1722</td>\n",
-       "      <td>3792</td>\n",
-       "      <td>175</td>\n",
-       "      <td>603</td>\n",
-       "      <td>725</td>\n",
-       "      <td>158</td>\n",
-       "      <td>2937</td>\n",
-       "      <td>174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>405</td>\n",
-       "      <td>247</td>\n",
-       "      <td>2083</td>\n",
-       "      <td>956</td>\n",
-       "      <td>725</td>\n",
-       "      <td>258</td>\n",
-       "      <td>2044</td>\n",
-       "      <td>206</td>\n",
-       "      <td>2054</td>\n",
-       "      <td>561</td>\n",
-       "      <td>2223</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>355</td>\n",
-       "      <td>306</td>\n",
-       "      <td>2248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>837</td>\n",
-       "      <td>937</td>\n",
-       "      <td>225</td>\n",
-       "      <td>1115</td>\n",
-       "      <td>446</td>\n",
-       "      <td>451</td>\n",
-       "      <td>160</td>\n",
-       "      <td>1219</td>\n",
-       "      <td>56</td>\n",
-       "      <td>61</td>\n",
-       "      <td>62</td>\n",
-       "      <td>922</td>\n",
-       "      <td>58</td>\n",
-       "      <td>1228</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>1302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1371</td>\n",
-       "      <td>1062</td>\n",
-       "      <td>2267</td>\n",
-       "      <td>111</td>\n",
-       "      <td>135</td>\n",
-       "      <td>2113</td>\n",
-       "      <td>1503</td>\n",
-       "      <td>2130</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>2191</td>\n",
-       "      <td>129</td>\n",
-       "      <td>2494</td>\n",
-       "      <td>2220</td>\n",
-       "      <td>739</td>\n",
-       "      <td>138</td>\n",
-       "      <td>1907</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>3892</td>\n",
-       "      <td>148</td>\n",
-       "      <td>2944</td>\n",
-       "      <td>371</td>\n",
-       "      <td>135</td>\n",
-       "      <td>1525</td>\n",
-       "      <td>3201</td>\n",
-       "      <td>3506</td>\n",
-       "      <td>3930</td>\n",
-       "      <td>3207</td>\n",
-       "      <td>115</td>\n",
-       "      <td>3700</td>\n",
-       "      <td>2791</td>\n",
-       "      <td>597</td>\n",
-       "      <td>3314</td>\n",
-       "      <td>132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>259</td>\n",
-       "      <td>162</td>\n",
-       "      <td>186</td>\n",
-       "      <td>281</td>\n",
-       "      <td>210</td>\n",
-       "      <td>180</td>\n",
-       "      <td>184</td>\n",
-       "      <td>93</td>\n",
-       "      <td>135</td>\n",
-       "      <td>208</td>\n",
-       "      <td>88</td>\n",
-       "      <td>178</td>\n",
-       "      <td>96</td>\n",
-       "      <td>25</td>\n",
-       "      <td>103</td>\n",
-       "      <td>161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1080</td>\n",
-       "      <td>247</td>\n",
-       "      <td>1036</td>\n",
-       "      <td>936</td>\n",
-       "      <td>108</td>\n",
-       "      <td>971</td>\n",
-       "      <td>908</td>\n",
-       "      <td>1035</td>\n",
-       "      <td>123</td>\n",
-       "      <td>974</td>\n",
-       "      <td>103</td>\n",
-       "      <td>1064</td>\n",
-       "      <td>129</td>\n",
-       "      <td>1189</td>\n",
-       "      <td>1089</td>\n",
-       "      <td>938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>148</td>\n",
-       "      <td>1874</td>\n",
-       "      <td>122</td>\n",
-       "      <td>702</td>\n",
-       "      <td>922</td>\n",
-       "      <td>2271</td>\n",
-       "      <td>123</td>\n",
-       "      <td>111</td>\n",
-       "      <td>454</td>\n",
-       "      <td>1872</td>\n",
-       "      <td>2142</td>\n",
-       "      <td>2378</td>\n",
-       "      <td>126</td>\n",
-       "      <td>813</td>\n",
-       "      <td>1865</td>\n",
-       "      <td>1506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>842</td>\n",
-       "      <td>267</td>\n",
-       "      <td>230</td>\n",
-       "      <td>1665</td>\n",
-       "      <td>2274</td>\n",
-       "      <td>236</td>\n",
-       "      <td>262</td>\n",
-       "      <td>1714</td>\n",
-       "      <td>3281</td>\n",
-       "      <td>4804</td>\n",
-       "      <td>4404</td>\n",
-       "      <td>3833</td>\n",
-       "      <td>661</td>\n",
-       "      <td>4248</td>\n",
-       "      <td>3893</td>\n",
-       "      <td>1105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1112</td>\n",
-       "      <td>1260</td>\n",
-       "      <td>809</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1104</td>\n",
-       "      <td>156</td>\n",
-       "      <td>104</td>\n",
-       "      <td>1253</td>\n",
-       "      <td>793</td>\n",
-       "      <td>462</td>\n",
-       "      <td>608</td>\n",
-       "      <td>84</td>\n",
-       "      <td>99</td>\n",
-       "      <td>1174</td>\n",
-       "      <td>449</td>\n",
-       "      <td>929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>707</td>\n",
-       "      <td>668</td>\n",
-       "      <td>1778</td>\n",
-       "      <td>1687</td>\n",
-       "      <td>2073</td>\n",
-       "      <td>1892</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1139</td>\n",
-       "      <td>908</td>\n",
-       "      <td>78</td>\n",
-       "      <td>1885</td>\n",
-       "      <td>800</td>\n",
-       "      <td>945</td>\n",
-       "      <td>712</td>\n",
-       "      <td>57</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      0     1     2     3     4     5     6     7     8     9     10    11  \\\n",
-       "0    515   912   619  2043    96    93  2242  1385  2110   860  2255   621   \n",
-       "1    161  6142   142  1742   237  6969   211  4314  5410  4413  3216  6330   \n",
-       "2   1956  4470  3577   619   105  3996   128  1666   720  4052   108   132   \n",
-       "3   2163    99  2257   895   112  1771  1366  1631  2064  2146   103   865   \n",
-       "4   1955  3260  1539   764   185  5493  5365  5483  4973   175   207  1538   \n",
-       "5    181  3328  2274  3798  1289  2772  4037   851  1722  3792   175   603   \n",
-       "6    405   247  2083   956   725   258  2044   206  2054   561  2223  2003   \n",
-       "7    837   937   225  1115   446   451   160  1219    56    61    62   922   \n",
-       "8   1371  1062  2267   111   135  2113  1503  2130  1995  2191   129  2494   \n",
-       "9   3892   148  2944   371   135  1525  3201  3506  3930  3207   115  3700   \n",
-       "10   259   162   186   281   210   180   184    93   135   208    88   178   \n",
-       "11  1080   247  1036   936   108   971   908  1035   123   974   103  1064   \n",
-       "12   148  1874   122   702   922  2271   123   111   454  1872  2142  2378   \n",
-       "13   842   267   230  1665  2274   236   262  1714  3281  4804  4404  3833   \n",
-       "14  1112  1260   809    72  1104   156   104  1253   793   462   608    84   \n",
-       "15   707   668  1778  1687  2073  1892    62  1139   908    78  1885   800   \n",
-       "\n",
-       "      12    13    14    15  \n",
-       "0   1480   118  1230    99  \n",
-       "1    261  3929  5552   109  \n",
-       "2   2652   306  1892  1869  \n",
-       "3    123  1907  2362   876  \n",
-       "4   4824   205  1784  2503  \n",
-       "5    725   158  2937   174  \n",
-       "6   2500   355   306  2248  \n",
-       "7     58  1228  1217  1302  \n",
-       "8   2220   739   138  1907  \n",
-       "9   2791   597  3314   132  \n",
-       "10    96    25   103   161  \n",
-       "11   129  1189  1089   938  \n",
-       "12   126   813  1865  1506  \n",
-       "13   661  4248  3893  1105  \n",
-       "14    99  1174   449   929  \n",
-       "15   945   712    57    65  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d89e5748e409>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"puzzle_inputs/day2_input.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"day2_input.csv\", sep=\"\\t\", header=None)\n",
+    "data = pd.read_csv(\"puzzle_inputs/day2_input.csv\", sep=\"\\t\", header=None)\n",
     "data"
    ]
   },
